terms and cond.

--- a/README
+++ b/README
@@ -4,3 +4,7 @@ Pigo
 Python Interactive Game Objects
 
 Pigo is Copyright (c) Crispin Wellington 2009-2010
+
+All Code is licensed under the terms of the GPL 3 license as stated in the file 'COPYING'.
+
+
